--- a/Views/Home/City.cshtml
+++ b/Views/Home/City.cshtml
@@ -4,7 +4,7 @@
     var scheduleId = ViewBag.Schedule.Schedule_Id;
 }
 
-<h1>Activities</h1>
+<h1>Select City</h1>
 <div class="form-group">
     <input type="text" id="searchBox" class="form-control" placeholder="Search for a city" />
     <button id="submitCityButton" class="btn btn-primary mt-2">Save City</button>
