--- a/Views/Home/Home.cshtml
+++ b/Views/Home/Home.cshtml
@@ -9,7 +9,7 @@
     <div class="text-center">
         <h1 class="display-4">Welcome to Travel Agenda</h1>
         <p>Lets help you schedule your next adventure!</p>
-        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index" asp-route-id="@currentUser.Id">Start Schedule</a>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index" asp-route-id="">Start Schedule</a>
     </div>
     
 }
